# celestial_navigation_pi

./: .gitignore  .travis.yml  CMakeLists.txt  CelestialNavigation.fbp  README  README.md  Read-Build.md  VERSION.cmake  appveyor.yml  bld.bat
.circleci/: config.yml
OLD/: Frontend2.md
OLD/libs/bzip2/: CMakeLists.txt
ci/: circleci-build-android-arm64.sh  circleci-build-android-armhf.sh  circleci-build-debian.sh  circleci-build-macos.sh  docker-build-flatpak.sh
cmake/: PluginConfigure.cmake  PluginInstall.cmake  PluginPackage.cmake  PluginSetup.cmake  PluginXML.cmake
cmake/in-files/: cloudsmith-upload.sh.in  org.opencpn.OpenCPN.Plugin.yaml.in  version.h.in
data/: Celestial Navigation Basics.html  Celestial_Navigation_Information.html  IGRF11.COF  vsop87d.txt
manual/: antora.yml  site.yml
manual/celestial_navigation/: antora.yml
manual/celestial_navigation/modules/ROOT/images/: my_astro_sights.xml.doc  sights.xml.doc
manual/celestial_navigation/modules/ROOT/pages/: celestial_navigation.adoc
manual/modules/ROOT/attachments/: sights.xml.rick2.doc
manual/modules/ROOT/images/: my_astro_sight_2017.txt.doc
manual/modules/ROOT/pages/: index.adoc
po/: POTFILES.in  POTFILES.in.test  aa_ER.po  ar_SA.po  bg_BG.po  ca.po  ca_ES.po  celestial_navigation_pi.pot  cs.po  cs_CZ.po  da.po  da_DK.po  de.po  de_DE.po  el.po  el_GR.po  en_GB.po  es.po  es_EM.po  es_ES.po  et.po  et_EE.po  fi.po  fi_FI.po  fil_PH.po  fr.po  fr_FR.po  gl.po  gl_ES.po  he_IL.po  hi_IN.po  hu.po  hu_HU.po  id_ID.po  is_IS.po  it.po  it_IT.po  ja.po  ja_JP.po  ko_KR.po  (+23 more)
po/OLD/: tr_TR.po
src/: CelestialNavigationDialog-2.3.5.1-no-android.cpp  CelestialNavigationDialog-2.3.5.2-android.cpp  CelestialNavigationDialog-partial-android.cpp  CelestialNavigationDialog.cpp  CelestialNavigationDialog.h  CelestialNavigationUI.cpp  CelestialNavigationUI.h  ClockCorrectionDialog.cpp  ClockCorrectionDialog.h  FindBodyDialog.cpp  FindBodyDialog.h  FixDialog.cpp  FixDialog.h  Sight.cpp  Sight.cpp.bak  Sight.h  SightDialog.cpp  SightDialog.h  celestial_navigation_pi.cpp  celestial_navigation_pi.h  celestialnavigationdialog.cpp  celestialnavigationdialog.h  epv00.cpp  findbodydialog.cpp  findbodydialog.h  geodesic.c  geodesic.h  icons.cpp  icons.h  ocpn_plugin.h  sight.cpp  sight.h  sightdialog.cpp  sightdialog.h  transform_star.cpp  transform_star.hpp  zuFile.cpp  zuFile.h
src/astrolabe/: astrolabe.hpp  calendar.cpp  dicts.cpp  dynamical.cpp  elp2000.cpp  equinox.cpp  globals.cpp  nutation.cpp  riseset.cpp  sun.cpp  util.cpp  vsop87d.cpp
src/geomag/: geomag.c
src/plugingl/: TexFont.h  pi_shaders.cpp  pi_shaders.h  pidc.cpp  qtstylesheet.cpp
src/tinyxml/: tinyxml.cpp
